# serializer version: 1
# name: test_data_version_by_field_unchanged_by_project
  dict({
    'field1': '9cb9f5bd9b380278e273033d16f07feabda7bdf5b813e9941b0f29e63b20efdb',
    'field2': '0b485f68befbb7abb029b43a698161745c63259b8ad0bc00260b7da4b9830243',
  })
# ---
# name: test_feature_tracking_version_includes_project
  dict({
    'feature_version_a': '3731d5aef6d53cfda612433171c52401406f94fd1c3482e7754ef2b24d85d170',
    'feature_version_b': '3731d5aef6d53cfda612433171c52401406f94fd1c3482e7754ef2b24d85d170',
    'feature_versions_same': True,
    'project_a': 'project_a',
    'project_b': 'project_b',
    'tracking_version_a': 'fc7bde342b5583a99961c5c1a5c6188d362a691d86d6c61d0b92cb03115f6ff9',
    'tracking_version_b': 'd6b58547ece9d614fd6194165ab23277d4d7db76656709f260e4866f02f18cb5',
    'tracking_versions_differ': True,
  })
# ---
# name: test_feature_version_unchanged_by_project
  'fcd6985a4dea45488450141be5c4712fd47781b4d0a7e42f04760c376eadf42f'
# ---
# name: test_feature_with_deps_different_projects
  dict({
    'downstream_a_project': 'project_a',
    'downstream_a_version': 'b7478f4be75eea0fa8d468df3f33cc8033cde080313e4ef783222fd65416f8e2',
    'downstream_b_project': 'project_b',
    'downstream_b_version': 'b7478f4be75eea0fa8d468df3f33cc8033cde080313e4ef783222fd65416f8e2',
    'upstream_a_project': 'project_a',
    'upstream_a_version': '8fd9019605c792a83a2cab5aaac4aea7a1e8524e51b728c0e02beb8032ee0ec1',
    'upstream_b_project': 'project_b',
    'upstream_b_version': '8fd9019605c792a83a2cab5aaac4aea7a1e8524e51b728c0e02beb8032ee0ec1',
  })
# ---
# name: test_project_in_graph_snapshot
  dict({
    'feature1_project': 'snapshot_project',
    'feature2_project': 'snapshot_project',
    'feature_keys': list([
      'feature1',
      'feature2',
    ]),
  })
# ---
# name: test_tracking_version_deterministic
  '16cd8a38139da8d77590ab9c4503b68c376bc83b9a7e38b9d793e23c7efd8172'
# ---
